# mcp-haystack

./: .gitignore  Dockerfile  README.md  pyproject.toml
examples/: rijksmuseum_demo.ipynb
src/haystack_integrations/tools/mcp/: __init__.py  connection.py
