[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mcp-haystack-demo"
dynamic = ["version"]
description = "Haystack integration for Model Context Protocol (MCP)"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "deepset GmbH", email = "info@deepset.ai" },
]
dependencies = ["mcp", "haystack-ai>=2.9.0"]

[project.urls]
Documentation = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/mcp#readme"
Issues = "https://github.com/deepset-ai/haystack-core-integrations/issues"
Source = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/haystack_integrations"]

[tool.hatch.version]
source = "vcs"
tag-pattern = 'integrations\/mcp-v(?P<version>.*)'

[tool.hatch.version.raw-options]
root = "../.."
git_describe_command = 'git describe --tags --match="integrations/mcp-v[0-9]*"'
fallback_version = "0.0.1.dev0"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
    "mcp-server-time"
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
asyncio_default_fixture_loop_scope = "function"